@startuml AppV2

skinparam ClassAttributeIconSize 0
hide circle

class App {
    - Canvas miVentana
    - ArrayList<Circulo> circulos
    - ArrayList<Rectangulo> rectangulos
    + ejecutar ()
    + RebotePelota ()
    + ReboteRectangulo ()
}

class Posicion {
    - int x
    - int y
    + Posicion(int x, int y)
    + int getX ()
    + int getY ()
}

class Circulo {
    - MAX_RADIO = 1000
    - Color color
    - int radio
    - Posicion pos
    - String nombre
    + Circulo (double radio)
    - determinarColor ()
    + getPerimetro () : double
    + getSuperficie () : double
}

class Rectangulo {
    - MAX_LADO = 1000
    - Color color
    - int lado1
    - int lado2
    - Posicion pos
    - String nombre
    + Rectangulo (double l1, double l2)
    - determinarColor ()
    + double getPerimetro ()
    + double getSuperficie ()
}

App --> Circulo
App --> Rectangulo
App -> Canvas

Circulo --> Posicion
Circulo -> Color
Rectangulo -->Posicion
Color <- Rectangulo

@enduml